[package]
name = "leetcode-daily"
version = "0.0.1"
edition = "2024"

[dependencies]
poise = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
rand = "0.9"
cached = { version = "0.51", features = ["async"] } 
regex = "1.12"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"